Created DbContext, set constraints on models

--- a/Vega/appsettings.json
+++ b/Vega/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=LAPTOP\\SQL2017;Database=Vega;Trusted_Connection=True;"
+  }
 }
