--- a/Vega/ClientApp/angular.json
+++ b/Vega/ClientApp/angular.json
@@ -10,7 +10,7 @@
           "style": "scss"
         }
       },
-      "root": "ClientApp",
+      "root": "",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
@@ -24,7 +24,10 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.scss"],
+            "styles": [
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ],
             "scripts": []
           },
           "configurations": {
